# ride-discount-solid

./: .gitignore  Makefile  README-ARCHITECTURE.md  README.md  demo.py  pyproject.toml  test_senior.py  weekend_discount_rule.md
examples/: 1_junior_version.py  2_mid_level_version.py  3_senior_version.py  example_usage.py
src/: __init__.py
src/ride_discount/: __init__.py  protocols.py
src/ride_discount/application/: __init__.py  dtos.py
src/ride_discount/application/use_cases/: __init__.py  calculate_ride_discount.py
src/ride_discount/domain/: __init__.py  entities.py  value_objects.py
src/ride_discount/domain/rules/: __init__.py  base.py  distance.py  frequency.py  offpeak.py
tests/: __init__.py  conftest.py
tests/application/: test_dtos.py
tests/application/test_use_cases/: test_calculate_ride_discount.py
tests/domain/: test_entities.py  test_value_objects.py
tests/domain/test_rules/: __init__.py  test_distance.py  test_frequency.py  test_offpeak.py
